# test-multi-cloud-cicd

./: README.md  app_definition.py  pyproject.toml
apps/: static_website.py
tests/: test_app_definition.yaml  test_static_website.py
